--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,4 +1,3 @@
 echo "Installing requirements"
-. $OPENSHIFT_HOMEDIR/python-2.7/activate_virtenv
-pip install -r $OPENSHIFT_REPO_DIR/requirements.txt
+$OPENSHIFT_DATA_DIR/bin/pip install --use-mirrors -r $OPENSHIFT_REPO_DIR/requirements.txt
 echo "Installing requirements done"
