--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,3 +1,4 @@
+#!/bin/bash
 echo "Installing requirements"
 $OPENSHIFT_DATA_DIR/bin/pip install --use-mirrors -r $OPENSHIFT_REPO_DIR/requirements.txt
 echo "Installing requirements done"
