--- a/wercker.yml
+++ b/wercker.yml
@@ -5,6 +5,10 @@ build:
   steps:
     # A step that executes `pip install` command
     - pip-install
+    
+    - script:
+        name: Export a bang
+        code: export my_bang_from_script="!"
 
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
