--- a/wercker.yml
+++ b/wercker.yml
@@ -1,4 +1,10 @@
 box: python:2-slim
+dev:
+  steps:
+    - pip-install
+    - internal/watch:
+        code: python app.py
+        reload: true
 # Build definition
 build:
   # The steps that will be executed on build
