added reload is true

--- a/wercker.yml
+++ b/wercker.yml
@@ -4,6 +4,7 @@ dev:
     - pip-install
     - internal/watch:
         code: python app.py
+        reload: true
 # Build definition
 build:
   # The steps that will be executed on build
