--- a/wercker.yml
+++ b/wercker.yml
@@ -29,7 +29,7 @@ build:
         image-name: wercker-demo-app  # name used to refer to this image until it's pushed   
     - internal/docker-run:
         image: wercker-demo-app
-        name: myTestContainer     
+        name: demo-app-cicd     
 
 python-sample-app-build:
   steps:
