--- a/wercker.yml
+++ b/wercker.yml
@@ -39,5 +39,5 @@ python-sample-app-build:
         username: gse00014528/api.user
         password: zA(nw>J.sl3(6;.o8>Hy
         tag: latest
-        repository: https://iad.ocir.io/wercker-demo
+        repository: axisdemo
         registry: https://iad.ocir.io
