--- a/wercker.yml
+++ b/wercker.yml
@@ -33,11 +33,11 @@ build:
     - internal/docker-kill:
         name: demo-app-cicd
 
-python-sample-app-build:
+wercker-demo-cicd:
   steps:
     - internal/docker-push:
         username: $CONTAINER_REGISTRY_USERNAME
         password: $API_USER_TOKEN
-        tag: latest
+        tag: latest, $WERCKER_GIT_COMMIT, $WERCKER_GIT_BRANCH
         repository: gse00014528/axisdemo/wercker-demo-app
         registry: https://iad.ocir.io
