--- a/wercker.yml
+++ b/wercker.yml
@@ -76,4 +76,5 @@ deploy-to-kubernetes:
     - kubectl:
         cwd: $WERCKER_ROOT/kubernetes/deployment
         insecure-skip-tls-verify: true
+        command: create namespace wercker-demo
         command: --namespace wercker-demo apply -f .
