--- a/wercker.yml
+++ b/wercker.yml
@@ -1,22 +1,11 @@
 box:
-  id: python:2.7-slim
+  id: ubuntu:latest
   ports:
-    - "5000"
-
-dev:
-  steps:
-    - pip-install
-    - internal/watch:
-        code: python app.py
-        reload: true
-        
+    - "5000" 
 # Build definition
 build:
   # The steps that will be executed on build
   steps:
-    # A step that executes `pip install` command
-    - pip-install
-
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
     - script:
