--- a/wercker.yml
+++ b/wercker.yml
@@ -55,5 +55,7 @@ deploy-to-kubernetes:
         cwd: $WERCKER_ROOT/kubernetes/deployment
         insecure-skip-tls-verify: true
         command: apply -f .
-     - kubectl:
+    - kubectl:
+        cwd: $WERCKER_ROOT/kubernetes/deployment
+        insecure-skip-tls-verify: true
         command: rolling-update webapp --image=$TENANCY_NAME/$REPO_NAME/sampleflaskapp:latest --image-pull-policy Always
