--- a/wercker.yml
+++ b/wercker.yml
@@ -54,8 +54,4 @@ deploy-to-kubernetes:
     - kubectl:
         cwd: $WERCKER_ROOT/kubernetes/deployment
         insecure-skip-tls-verify: true
-        command: apply -f .
-    - kubectl:
-        cwd: $WERCKER_ROOT/kubernetes/deployment
-        insecure-skip-tls-verify: true
-        command: set image deployment/webapp webapp=$TENANCY_NAME/$REPO_NAME/sampleflaskapp:latest --imagePullSecrets=ocir-secret
+        command: rolling-update webapp --image=$TENANCY_NAME/$REPO_NAME/sampleflaskapp:latest
